fix alignment

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -4,7 +4,6 @@
 
 .archive {
   margin-bottom: 2em;
-  text-align: justify;
 
   @include breakpoint($medium) {
     @include span(12 of 12);
