--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -96,9 +96,9 @@ body:hover .visually-hidden button {
   text-align: right;
 }
 
-.text-justify {
-  text-align: justify;
-}
+//.text-justify {
+//  text-align: justify;
+//}
 
 .text-nowrap {
   white-space: nowrap;
